# PLASMA-Protein-Local-Alignment

./: .gitignore  README.md  align.py  dataset_prep.py  download_pdb.py  embed.py  environment.yaml  eval_align_baselines.py  eval_baselines.py  evaluate.py  evaluate_pf.py  pyproject.toml  train.py
alignment/: __init__.py  alignment.py  hub.py  interaction_nonlinearity.py  interaction_structures.py  utils.py
backbones/: README.md  base.py
backbones/plms/: model.py
backbones/protssn/: dataset_utils.py  model.py  models.py  protssn.py
backbones/protssn/module/: egnn.py  egnn_pytorch_geometric.py
backbones/tm_vec_and_prostt5/: embed_structure_model.py  model.py  tm_vec_utils.py
configs/: align.yaml  align_baselines.yaml  baselines.yaml  dataset_prep.yaml  download_pdb.yaml  embed.yaml  evaluate.yaml  evaluate_pf.yaml  train.yaml
configs/alignment_module/: default.yaml  eba.yaml  plasma.yaml  plasma_pf.yaml
configs/backbone/: Ankh.yaml  ESM2.yaml  ProtBERT.yaml  ProtSSN.yaml  ProtT5.yaml  TM-Vec_and_ProstT5.yaml  default.yaml  plm.yaml
configs/hydra/: custom_run_dir.yaml  default.yaml
configs/launcher/: qsub.yaml  submitit_local.yaml
scripts/: hf_model_card.md  upload_to_hf.py
utils/: __init__.py  alignment_utils.py  data_utils.py  launcher_utils.py  log_utils.py  result_analysis_utils.py  run_utils.py  time_utils.py  visualization_utils.py
