[project]
name = "plasma-protein-local-alignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.8.0+cu126",
    "biopython>=1.85",
    "einops>=0.8.1",
    "faiss-gpu-cu12>=1.12.0",
    "huggingface-hub>=0.36.0",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "setuptools>=80.9.0",
    "tokenizers>=0.22.1",
    "torch-geometric>=2.7.0",
    "transformers>=4.57.1",
    "torchmetrics>=1.8.2",
    "plotly>=6.3.1",
    "hydra-joblib-launcher>=1.2.0",
    "sentencepiece>=0.2.1",
    "notebook>=7.4.7",
    "lightning>=2.5.6",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
